content/boundary/v0.21.x/content/docs/domain-model/host-sets.mdx
---
layout: docs
page_title: Host set resource
description: >-
  Learn about using the host set resource to organize and manage hosts that have the same level of access control and belong to the same host catalog.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-18T17:04:41-05:00
last_modified: 2025-11-18T17:04:41-05:00
# END AUTO GENERATED METADATA
---

# Host sets

A host set is a resource
that represents a collection of [hosts][]
which are considered equivalent
for the purposes of access control.
A host set can only include hosts
from the same [host catalog][] as the host set.
A [target][] can reference host sets from host catalogs
which belong to the same [project][] as the target.

## Attributes

A host set has the following configurable attributes:

- `name` - (optional)
  If set, the `name` must be unique within the host set's parent host catalog.

- `description` - (optional)

- `preferred_endpoints` - (optional)
  If set, specifies which IP address or DNS name out of a host's available options is your preferred endpoint for when Boundary establishes a [session][] with the target.
  The `preferred_endpoints` option may not be valid for all plugin types.

  You can specify multiple endpoints using CIDR or DNS formats to create an order of preferences.
  CIDR strings should follow the `cidr:<valid IPv4/6 CIDR>` format, for example, `cidr:10.0.0.0/16`.
  DNS strings should follow the `dns:<globbed name>` format, for example `dns:* .internal`.

  If you do not specify a preference, Boundary chooses an endpoint using the following built-in priority order:

  1. Private IPv4
  1. Public IPv4
  1. DNS
  1. Private IPv6
  1. Public IPv6

### Plugin host set attributes

- `attributes` - (optional)
  A collection of fields which the plugin uses to lookup which hosts should be
  members of this host set.  Often this includes a type of filter using a
  syntax which is usable by the backing service.

- `sync_interval_seconds` - (optional)
  The number of seconds between the time boundary syncs the hosts in this
  set using this host set's plugin. Defaults to `600` seconds, or 10 minutes.

## Referenced by

- [Host][]
- [Host catalog][]
- [Target][]

[host catalog]: /boundary/docs/domain-model/host-catalogs
[host catalogs]: /boundary/docs/domain-model/host-catalogs
[host]: /boundary/docs/domain-model/hosts
[hosts]: /boundary/docs/domain-model/hosts
[project]: /boundary/docs/domain-model/scopes#projects
[projects]: /boundary/docs/domain-model/scopes#projects
[session]: /boundary/docs/domain-model/sessions
[sessions]: /boundary/docs/domain-model/sessions
[target]: /boundary/docs/domain-model/targets
[targets]: /boundary/docs/domain-model/targets

## Service API docs

The following services are relevant to this resource:

- [Host set service](/boundary/api-docs/host-set-service)
